# LeDreamer-mc

./: .gitignore  README.md  eval-requirements.txt  minecraft_vpt_dataset.py  pyproject.toml  train-requirements.txt  train_dreamer4_minecraft.py
.github/workflows/: deploy_docs.yml
Video-Pre-Training/: dreamer4_minecraft_agent.py  evaluate_dreamer4_minecraft.py
docs/: index.html
documentation/tests/: COVERAGE.md
download/: download_vpt.py
dreamer4/: __init__.py  dreamer4.py  trainers.py
release2_artifacts/: _render_pdoc.py
release2_artifacts/docs/: download_vpt.html  dreamer4_minecraft_agent.html  evaluate_dreamer4_minecraft.html  minecraft_vpt_dataset.html  search.js  train_dreamer4_minecraft.html
scripts/: dreamer4-full-train.sh  eval-requirements.txt  lewm-full-train.sh  setup-eval-env.sh  setup-eval-venv.sh  train-requirements.txt
test_documentation_temp/: MANUAL_TESTS.md  TRACEABILITY_MATRIX.md  conftest.md  test_minecraft_agent.md  test_minecraft_dataset.md  test_minecraft_evaluate.md  test_minecraft_integration.md  test_minecraft_training.md
tests/: conftest.py  test_dreamer.py  test_minecraft_agent.py  test_minecraft_dataset.py  test_minecraft_evaluate.py  test_minecraft_integration.py  test_minecraft_training.py
